	* Fix disabling/enabling plugins after switching daemons
	* Reduce height of Add Torrent Dialog by ~80 pixels
	* Fix #1071 issue where Deluge will fail to start if there is a stale ipc lockfile
	* Fix autoconnecting to the next host in the list if the selected one isn't available
	* Fix endless loop when trying to autoconnect to an offline daemon

==== Web ====
	* Fix installing the deluge-web manpage
	* Escape hyphens in the manpage

==== Console ====
	* Escape hyphens in the manpage
	* Make the delete key work
	* Allow ~ to be used in the path in the add command
	* Allow commands that are .pyc files to be used
	* Fix printing info, help, etc.. on the command line

==== Blocklist ====
	* Force blocklist to auto-detect format when a download / import is forced
	* Fix blocklist failing on certain PeerGuardian/SafePeer lists

=== Deluge 1.2.0_rc3 (01 November 2009) ===
==== Core ====
	* Fix #1047 move completed does not work if saving to non default path
	* Fix renamed files not being utf-8 encoded
	* Fix torrent name being blank when renaming root folder to /
	* Do not include an 'announce-list' key in torrents when there is only one tracker

==== GtkUI ====
	* Replace & with &amp; in the details tab to ensure there are no markup errors
	* Consider 0 unlimited when displaying limits in the statusbar
	* Fix adding torrents when not showing the add torrent dialog in Windows
	* Fix crash when removing multiple torrents

==== Web ====
	* Fix #1046 changing auto managed via the details tab
	* Fix setting torrent options when adding
	* Fix setting file priorities when adding
	* HTML escape the field values on the details tab
	* Fix #215, make infinite eta values display in the correct order
	* Fix displaying the protocol upload speed
	* Fix #990, showing 0 as a limit when it means unlimited in the statusbar

==== Console ====
	* Fix displaying non-ascii strings
	* Fix #1052 crash when issuing commands while not connected to a daemon